examples/effects/op_call_wrong_arg.err.expected
error: type mismatch in op call Io.print
  --> examples/effects/op_call_wrong_arg.kai:10:11
     |
  10 |   Io.print(42)
     |           ^
  = note: expected: (String) -> Unit
  = note: found:    (Int) -> ?t0
error: `main` declares effect `Io` but no default handler is installed for it
  --> examples/effects/op_call_wrong_arg.kai:10:11
     |
  10 |   Io.print(42)
     |           ^
  = note: only the canonical stdlib effects (Stdout, Stderr, Fail, Stdin, Env, File, Clock, Random, SecureRandom, NetTcp, Signal, Process, Log, Mutable, Cancel, Link, Monitor, Spawn) receive a default handler from the `main` wrapper
  = note: `Io` is either user-declared or a capability-only effect (e.g. `Ffi`); the runtime would have no evidence for it at the top level
  = help: wrap the body in `handle { ... } with Io { ... }` so the effect is closed before reaching `main`'s scope
  = help: or remove `/ Io` from `main`'s declared row if the call site is dead code
error: effect not handled: Io.print
  --> examples/effects/op_call_wrong_arg.kai:10:11
     |
  10 |   Io.print(42)
     |           ^
  = note: effect `Io` declares no `default { }` block, so no fallback handler exists
  = help: wrap the call in `handle { ... } with Io { print(args, resume) -> ... }`, or add `print(args, resume) -> ...` to `effect Io`'s `default { }` block
